--- a/about.html
+++ b/about.html
@@ -95,14 +95,15 @@
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#therapist">言語治療師</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="about.html#worker">註冊社工</a>
+												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="about.html#worker">社工</a></li>
 											</ul>
 										</li>
 										<li><a href="share.html">諾道分享</a></li>
 										<li><a href="good.html">諾道好評</a></li>
-										<li><a href="contact.html">聯絡我們</a></li>
+										<li><a href="contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -110,14 +111,14 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><i class="fa fa-whatsapp"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><i class="fa fa-envelope"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><i
-											class="fa fa-facebook"></i></a></li>&nbsp&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><i
-											class="fa  fa-instagram"></i></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="images/whatsapp2.png"></a></li>
+								&nbsp&nbsp
+								<li><a href="mailto:info@prowayst.com"><img src="images/mail.png"></i></a></li>
+								&nbsp&nbsp
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img
+											src="images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img
+											src="images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -265,7 +266,7 @@
 		<div class="team">
 			<div class="container">
 				<div class="agileits-about-top-heading">
-					<h3 id="worker">社工</h3>
+					<h3 id="worker">註冊社工</h3>
 				</div>
 				<div class="team-grids">
 					<!-- Bottom to top-->
@@ -390,25 +391,22 @@
 			<div class="agile-footer-grids">
 				<div class="col-md-4 agile-footer-grid">
 					<h4>諾道言語治療</h4>
-					<p>如有任何查詢或洽談合作，<br>
-						歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-						<span>Address: N3, 21/F, W LUXE, <br>No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-					</p>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>電話：6532 8821</span><br>
+					<span>電郵：info@prowayst.com</span>
 				</div>
 
-				<div class="col-md-2 agile-footer-grid">
-					<h4>時間</h4>
-					<span><b>星期二至日</b><br>
-						09:00 - 18:00</span>
-					<br>
-					<span><b>星期一</b><br>
-						休息</span>
-
-						<br>
-					<span>敬請預約</span>
+				<div class="col-md-4 agile-footer-grid">
+					<span><b>星期二至日</b> 09:00 - 18:00</span>
+					<br><br>
+					<span><b>星期一</b> 休息</span>
+					<br><br>
+					<span><b>敬請預約</b></span>
 				</div>
 
+				<div class="videos col-md-2 agile-footer-grid">
+
+				</div>
 
 				<div class="clearfix"> </div>
 			</div>
