--- a/article/article01.html
+++ b/article/article01.html
@@ -80,9 +80,9 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom" href="prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -91,15 +91,15 @@
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#therapist">言語治療師</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">註冊社工</a>
+												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">社工</a>
-												</li>
 											</ul>
 										</li>
 										<li><a class="active" href="../share.html">諾道分享</a></li>
 										<li><a href="../good.html">諾道好評</a></li>
-										<li><a href="../contact.html">聯絡我們</a></li>
+										<li><a href="../contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -131,83 +131,63 @@
 			<!-- article -->
 			<div class="article">
 				<div class="narrow-text">
-					<h2>⾔語治療是甚麼? 我的孩⼦需要嗎?</h2>
-					<p>撰⽂：諾道團隊</p>
-					<p>已更新：24小時前</p>
+					<h2>言語治療是甚麼? 我的孩子需要嗎?</h2>
+					<p>撰文：諾道團隊</p>
+					<p>已更新：6小時前</p>
 				</div>
 				<div style="text-align: center;">
 					<img src="../images/Article/article001.png" style="max-width: 100%;" />
 				</div>
 				<hr>
 				<div class="panel-body narrow-text">
-					⾔語治療這個專業在⾹港越來越多⼈認識，但仍然有很多⼈不知道⾔語治療師到底是做甚麼的。<br><br>
-					這個名稱聽起來讓⼈覺得⾔語治療師就是「教⼈講嘢」，然⽽事實當然不是這樣。<br><br>
-					⾔語治療師不是⽼師，也不是醫⽣，我們就是治療師，在⾹港的醫療體制下我們屬於專職醫
-					療。職業治療師、物理治療師、聽⼒學家等的專業也屬於專職醫療。<br><br>
-					⾔語治療師主要負責預防、評估、診斷和治療兒童及成⼈的語⾔障礙、社交溝通障礙、⾔語
-					障礙以及吞嚥障礙。<br><br>
-					今天我們將重點談論需要⾔語治療協助的孩⼦。簡單來說，如果你的孩⼦有以下四⼤類的需
-					要，⾔語治療師都能為你提供協助。<br><br>
+					言語治療這個專業在香港越來越多人認識，但仍然有很多人不知道言語治療師到底是做甚麼的。<br><br>
+					這個名稱聽起來讓人覺得言語治療師就是「教人講嘢」，然⽽事實當然不是這樣。<br><br>
+					言語治療師不是老師，也不是醫生，我們就是治療師，在香港的醫療體制下我們屬於專職醫療。職業治療師、物理治療師、聽力學家等的專業也屬於專職醫療。<br><br>
+					言語治療師主要負責預防、評估、診斷和治療兒童及成人的語言障礙、社交溝通障礙、言語障礙以及吞嚥障礙。<br><br>
+					今天我們將重點談論需要言語治療協助的孩子。簡單來說，如果你的孩子有以下四大類的需要，言語治療師都能為你提供協助。<br><br>
 
-					<h3><b>第⼀類：語⾔問題</b></h3>
-					語⾔能⼒可分為理解能⼒和表達能⼒兩⼤範疇。<br>
-					理解能⼒就是能不能聽懂別⼈說話的內容，表達能⼒就是能不能清晰說出⾃⼰的想法。<br><br>
-					語⾔障礙常⾒的問題包括（與同齡⼩孩相較）：<br>
+					<h3><b>第一類：語言問題</b></h3>
+					語言能力可分為理解能力和表達能力兩大範疇。<br>
+					理解能力就是能不能聽懂別人說話的內容，表達能力就是能不能清晰說出自已的想法。<br><br>
+					語言障礙常見的問題包括（與同齡小孩相較）：<br>
 					<ul>
-						<li>難以明⽩⼜頭指⽰</li>
+						<li>難以明白口頭指示</li>
 						<li>答非所問</li>
 						<li>詞彙量少，詞不達意</li>
-						<li>難以掌握複雜的句式，語句過於簡短或出現⽂法錯誤</li>
-						<li>組織能⼒弱，未能清楚敘述事情</li>
+						<li>難以掌握複雜的句式，語句過於簡短或出現文法錯誤</li>
+						<li>組織能力弱，未能清楚敘述事情</li>
 					</ul>
 					<br>
-					<h3><b>第⼆類：⾔語問題</b></h3>
-					⾔語障礙可分為以下三類。<br><br>
+					<h3><b>第二類：言語問題</b></h3>
+					言語障礙可分為以下三類。<br><br>
 
-					<b><u>發⾳問題</u></b><br>
-					每個年齡層都有相應能掌握的語⾳，有些孩⼦語⾔能⼒沒有問題，但是因為先天或後天原因
-					導致發⾳不準確，影響說話清晰度。<br><br>
+					<b><u>發音問題</u></b><br>
+					每個年齡層都有相應能掌握的語音，有些孩子語言能力沒有問題，但是因為先天或後天原因導致發音不準確，影響說話清晰度。<br><br>
 
 					<b><u>聲線問題</u></b><br>
-					即是嗓⾳出現問題，有些孩⼦說話時聲量過⼤或過⼩、⾳調過⾼或過低，或者因經常⼤叫導
-					致聲⾳沙啞。<br><br>
+					即是嗓音出現問題，有些孩子說話時聲量過大或過小、音調過⾼或過低，或者因經常大叫導致聲音沙啞。<br><br>
 
 					<b><u>說話流暢度問題</u></b><br>
-					這就是我們平時說的⼜吃、⼜窒窒、漏⼜。常⾒的臨床表現包括重複字詞，不適當地延長語
-					⾳或在句⼦中間停頓。<br><br>
+					這就是我們平時說的口吃、口窒窒、漏口。常見的臨床表現包括重複字詞，不適當地延長語音或在句子中間停頓。<br><br>
 
 					<h3><b>第三類：社交溝通問題</b></h3>
-					語⾔能⼒除了理解能⼒和表達能⼒，還有我們所說的「語⽤」，即是運⽤語⾔的能⼒。這就
-					關係到社交溝通層⾯。<br><br>
+					語言能力除了理解能力和表達能力，還有我們所說的「語用」，即是運用語言的能力。這就關係到社交溝通層面。<br><br>
 
-					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to
-					say it)。如果孩⼦在這些層⾯出現困難，可能就有社交溝通障礙。<br><br>
-					有些孩⼦既懂得說話，發⾳亦準確，但他們總是不懂得在恰當的場合(when)，以適當的⽅式
-					(how)說合宜的內容(what)。<br><br>
-					例如媽媽說：「真係俾你激死！」⼩朗回應：「你都無死到。」這些情況不是把⼈氣死，就
-					是令⼈非常尷尬！要是⼩朗不是駁嘴的話，很可能他有語⾔障礙，是運⽤語⾔⽅⾯出了問
-					題，導致社交溝通障礙。<br><br>
-					說到這裡可能你也會想到⾃閉症的孩⼦，的⽽且確社交溝通是⾃閉症孩⼦會遇到明顯困難的
-					範疇，⾔語治療師會透過適當的社交技巧訓練協助孩⼦處理社交問題。<br><br>
+					簡單來說就是要懂得：說甚麼(what to say)、如何說(how to say it)、以及甚麼時候說(when to say
+					it)。如果孩子在這些層面出現困難，可能就有社交溝通障礙。<br><br>
+					有些孩子既懂得說話，發音亦準確，但他們總是不懂得在恰當的場合(when)，以適當的方式(how)說合宜的內容(what)。<br><br>
+					例如媽媽說：「真係俾你激死！」小朗回應：「你都無死到。」這些情況不是把人氣死，就是令人非常尷尬！要是小朗不是駁嘴的話，很可能他有語言障礙，是運用語言方面出了問題，導致社交溝通障礙。<br><br>
+					說到這裡可能你也會想到自閉症的孩子，的⽽且確社交溝通是自閉症孩子會遇到明顯困難的範疇，言語治療師會透過適當的社交技巧訓練協助孩子處理社交問題。<br><br>
 
-					<h3><b>第四類：⼜肌及吞嚥問題</b></h3>
-					⼜肌即⼜部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還
-					有進食。<br><br>
+					<h3><b>第四類：口肌及吞嚥問題</b></h3>
+					口肌即口部肌⾁，下巴、嘴唇及⾆頭都是其中重要組成部份，主要負責的功能除了說話，還有進食。<br><br>
 
-					吞嚥困難是指食物或飲料由⼜腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障
-					礙。<br><br>
-					孩⼦未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或
-					後天因素引起(例如：受⽗母等家庭成員的習慣影響)。⾔語治療師會透過吞嚥訓練及調節餐
-					類等等的⽅法幫助孩⼦安全進食。<br><br>
+					吞嚥困難是指食物或飲料由口腔到咽喉、食道再到達胃部的過程中，因任何原因引起的障礙。<br><br>
+					孩子未能順利進食的原因有很多，好像因先天疾病(例如：兔唇裂顎)引致的結構問題，又或後天因素引起(例如：受⽗母等家庭成員的習慣影響)。言語治療師會透過吞嚥訓練及調節餐類等等的方法幫助孩子安全進食。<br><br>
 
 					<h3><b>總結</b></h3>
-					這篇⽂章簡介⾔語治療的範疇，並不包括所有⾔語治療師會處理的問題。同時，要知道每個
-					孩⼦的情況都獨⼀無⼆，如果你對孩⼦的發展有懷疑或擔⼼的地⽅，盡快帶孩⼦找⾔語治療
-					師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩⼦成長最
-					好。<br><br>
-
-					把這篇⽂章分享給身邊跟你同樣關⼼孩⼦成長的朋友，讓我們⼀起和孩⼦健康快樂地成長。
-					如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
+					這篇文章簡介言語治療的範疇，並不包括所有言語治療師會處理的問題。同時，要知道每個孩子的情況都獨一無二，如果你對孩子的發展有懷疑或擔心的地方，盡快帶孩子找言語治療師作詳細評估吧！有需要幫忙的話，必定是愈早發現，愈早開始針對性跟進對孩子成長最好。<br><br>
+					把這篇文章分享給身邊跟你同樣關心孩子成長的朋友，讓我們一起和孩子健康快樂地成長。 如有任何問題或需要幫忙，歡迎你跟諾道團隊聯絡，我們樂意為你提供協助！<br><br>
 				</div>
 			</div>
 			<!-- //article -->
@@ -217,13 +197,24 @@
 		<div class="footer">
 			<div class="container">
 				<div class="agile-footer-grids">
-					<div class="col-md-12 agile-footer-grid">
-						<p>如有任何查詢或洽談合作，歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-							<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-							<span>Address: N3, 21/F, W LUXE, No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-						</p>
+					<div class="col-md-4 agile-footer-grid">
+						<h4>諾道言語治療</h4>
+						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+						<span>電話：6532 8821</span><br>
+						<span>電郵：info@prowayst.com</span>
 					</div>
 
+					<div class="col-md-4 agile-footer-grid">
+						<span><b>星期二至日</b> 09:00 - 18:00</span>
+						<br><br>
+						<span><b>星期一</b> 休息</span>
+						<br><br>
+						<span><b>敬請預約</b></span>
+					</div>
+
+					<div class="videos col-md-2 agile-footer-grid">
+
+					</div>
 
 					<div class="clearfix"> </div>
 				</div>
