--- a/our-services/enhancement.html
+++ b/our-services/enhancement.html
@@ -88,18 +88,18 @@
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道團隊<span class="caret"></span></a>
-											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom"
-														href="../about.html#therapist">言語治療師</a></li>
-												<li><a class="hvr-bounce-to-bottom"
-														href="../about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">社工</a>
-												</li>
-											</ul>
+												<ul class="dropdown-menu">
+													<li><a class="hvr-bounce-to-bottom"
+															href="../about.html#therapist">言語治療師</a></li>
+													<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">註冊社工</a>
+													</li>
+													<li><a class="hvr-bounce-to-bottom"
+															href="../about.html#psychologist">教育心理學家</a></li>
+												</ul>
 										</li>
 										<li><a href="../share.html">諾道分享</a></li>
 										<li><a href="../good.html">諾道好評</a></li>
-										<li><a href="../contact.html">聯絡我們</a></li>
+										<li><a href="../contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -107,14 +107,12 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><i class="fa fa-whatsapp"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><i class="fa fa-envelope"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><i
-											class="fa fa-facebook"></i></a></li>&nbsp&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><i
-											class="fa  fa-instagram"></i></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="../images/whatsapp2.png"></a></li>
+								&nbsp&nbsp
+								<li><a href="mailto:info@prowayst.com"><img src="../images/mail.png"></i></a></li>
+								&nbsp&nbsp
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img src="../images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img src="../images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -144,52 +142,45 @@
 
 			<div>
 				<br>
-				<p><img src="../images/o3_1.png"> <b>講故事技巧躍升班</b><br><br>
+				<p><img src="../images/o3_1.png"> <b id="treatment3">講故事技巧躍升班</b><br><br>
 
-					「阿仔平時講嘢無問題，對答到又識駁嘴，點知一對住啲圖卡就唔知點樣講個故事出嚟。」
+					🌟 ⾔語治療師規劃及教授🌟<br><br>
+
+					三⾄四歲的⼩朋友開始懂得運⽤連接詞及掌握較長較複雜的句⼦，對事情發⽣的先後次序有概念，亦有基本的邏輯性，這時正是教導⼩朋友講故事的絕好時機！<br><br>
+					諾道的「講故事技巧躍升班」由⾔語治療師規劃及教授， 從⾔語治療的⾓度切入，透過對語⾔發展的專業知識提升⼩朋友：<br>
+					✅ 圖⽚觀察能⼒<br>
+					✅ 詞彙運⽤的準確度及豐富性<br>
+					✅ 運⽤不同句式的能⼒<br>
+					✅ 邏輯思維能⼒<br>
+					✅ ⾓⾊代入能⼒<br>
+					✅ 加入對話的能⼒<br>
+					✅ 語⾔組織能⼒<br>
+					✅ 說話流暢度<br><br>
+					🔶 K1-K3的「講故事技巧躍升班」針對⼩⼀⾯試要求<br>
+					🔶 P1-P3的「講故事技巧躍升班」針對⼩學⼝語考試要求<br>
+					🔶 ⾼⼈⼿比例(1對3)，確保你的孩⼦每分每秒都有所得著<br>
+					🔶 每期均由同⼀位⾔語治療師負責，確保質素及⼀致性<br>
+					🔶 每次課後均會和家長傾談當節重點及跟進⽅向
 					<br>
-					「佢講嚟講去都係嗰幾個詞語，冇乜變化⋯⋯」
-					<br><br>
-					想小朋友成為講故事的高手？
-					<br><br>
-					那麼你一定不能錯過諾道為語言發展適齡小朋友而設的「講故事技巧躍升班」‼️
-					<br><br>
-					三至四歲的小朋友開始懂得運用連接詞及掌握較長較複雜的句子，對事情發生的先後次序有概念，亦有基本的邏輯性，這時正是教導小朋友講故事的絕好時機❣️
-					<br><br>
-					諾道的「講故事技巧躍升班」由言語治療師規劃及教授，透過我們對語言發展的專業知識提升小朋友：<br>
-					✅ 圖片觀察能力<br>
-					✅ 詞彙運用的準確度及豐富性<br>
-					✅ 運用不同句式的能力<br>
-					✅ 邏輯思維能力<br>
-					✅ 角色代入能力<br>
-					✅ 加入對話的能力<br>
-					✅ 語言組織能力<br>
-					✅ 說話流暢度<br>
-					<br><br>
-					🌟看圖說故事是小一面試🔥熱門考題，K2-K3的「講故事技巧躍升班」針對小學面試要求，令你的小朋友在面試時更加得心應手！<br>
-					🌟小學中文科口語考試亦離不開看圖敍事，P1-P2的「講故事技巧躍升班」針對小學要求教導小朋友輕鬆說出一個又一個豐富的故事，口語考試自然無有怕😎
-					<br><br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png"> 6532 8821</a>，將有專人為你提供詳情。
+					<br>
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/講故事技巧躍升班"><img src="../images/whatsapp.png">
+						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o3_2.png"> <b>一對一兒童為本遊戲輔導</b><br><br>
+				<p><img src="../images/o3_2.png"> <b id="treatment5">⼀對⼀兒童為本遊戲輔導</b><br><br>
 
-					<b>一對一兒童為本遊戲輔導是甚麼？</b><br>
-					你和我小時候都喜歡玩，長大後卻忘記了遊戲正正是兒童表達自己最自然的渠道；當感到被明白和接納，兒童就能重新看見自己的能力。<br>
-					輔導以遊戲作媒介，讓你的孩子透過自己最熟識的方法「玩出」心事，整理內在經驗，讓想法和感受在安全的環境下得以表達。
-					<br><br>
-					<b>一對一兒童為本遊戲輔導適合我的孩子嗎？</b><br>
-					一對一兒童為本遊戲輔導適合遇到煩惱挫折，需要情緒出口，缺乏安全感/能力感，需要提昇自尊自信或有行為問題之2-10歲兒童。
-					<br><br>
-					<b>在哪裡進行？</b><br>
-					諾道為孩子打造的「特別遊戲室」內所預備的玩具都具有治療性，由諾道團隊精心挑選，令進入房間的每一位孩子都在充滿信任的氛圍下獲得內心成長的養份。
-					<br><br>
-					<b>家長的角色？</b><br>
-					遊戲輔導過程需要你的高度參與，每4節遊戲輔導後我們就會進行一次詳細傾談，令「特別遊戲時間」更能協肋孩子面對日常挑戰和壓力。
-
+					你和我⼩時候都喜歡玩，長⼤後卻忘記了遊戲正正是兒童表達⾃⼰最⾃然的渠道；當感到被明⽩和接納，兒童就能重新看⾒⾃⼰的能⼒。輔導以遊戲作媒介，讓你的孩⼦透過⾃⼰最熟
+					識的⽅法「玩出」⼼事，整理內在經驗，讓想法和感受在安全的環境下得以表達。<br><br>
+					🔶 適合遇到煩惱挫折，需要情緒出⼝，缺乏安全感/能⼒感，需要提昇⾃尊⾃信或有⾏為問題之2-10歲兒童<br>
+					🔶 諾道為孩⼦打造的「特別遊戲室」內所預備的玩具都具有治療性，由諾道團隊精⼼挑選，令進入房間的每⼀位孩⼦都在充滿信任的氛圍下獲得內⼼成長的養份<br>
+					🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
+					🔶 輔導過程需要家長⾼度參與，令遊戲輔導更能協助孩⼦⾯對⽇常挑戰和壓⼒<br>
+					🔶 ⽗⺟需於⼦女進⾏第⼀次遊戲輔導前，與註冊社⼯進⾏⼤約1⼩時詳細諮詢，以瞭解⼩朋友情況(可選⾯談/zoom)<br>
+					🔶 每完成⼀期均會和家長進⾏詳細諮詢，傾談重點及跟進⽅向(可選⾯談/zoom)
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png"> 6532 8821</a>，將有專人為你提供詳情。
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/⼀對⼀兒童為本遊戲輔導"><img src="../images/whatsapp.png">
+						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				
 			</div>
@@ -218,13 +209,24 @@
 	<div class="footer">
 		<div class="container">
 			<div class="agile-footer-grids">
-				<div class="col-md-12 agile-footer-grid">
-					<p>如有任何查詢或洽談合作，歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-						<span>Address: N3, 21/F, W LUXE, No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-					</p>
+				<div class="col-md-4 agile-footer-grid">
+					<h4>諾道言語治療</h4>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>電話：6532 8821</span><br>
+					<span>電郵：info@prowayst.com</span>
 				</div>
 
+				<div class="col-md-4 agile-footer-grid">
+					<span><b>星期二至日</b> 09:00 - 18:00</span>
+					<br><br>
+					<span><b>星期一</b> 休息</span>
+					<br><br>
+					<span><b>敬請預約</b></span>
+				</div>
+
+				<div class="videos col-md-2 agile-footer-grid">
+
+				</div>
 
 				<div class="clearfix"> </div>
 			</div>
