--- a/share.html
+++ b/share.html
@@ -81,9 +81,12 @@
 												data-toggle="dropdown" role="button" aria-haspopup="true"
 												aria-expanded="false">諾道服務<span class="caret"></span></a>
 											<ul class="dropdown-menu">
-												<li><a class="hvr-bounce-to-bottom" href="our-services/prevention.html">預防</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="our-services/intervention.html">治療</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="our-services/enhancement.html">提升</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="our-services/prevention.html">預防</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="our-services/intervention.html">治療</a></li>
+												<li><a class="hvr-bounce-to-bottom"
+														href="our-services/enhancement.html">提升</a></li>
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
@@ -92,14 +95,15 @@
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#therapist">言語治療師</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="about.html#worker">註冊社工</a>
+												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="about.html#worker">社工</a></li>
 											</ul>
 										</li>
 										<li><a class="active" href="share.html">諾道分享</a></li>
 										<li><a href="good.html">諾道好評</a></li>
-										<li><a href="contact.html">聯絡我們</a></li>
+										<li><a href="contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -107,14 +111,14 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><i class="fa fa-whatsapp"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><i class="fa fa-envelope"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><i
-											class="fa fa-facebook"></i></a></li>&nbsp&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><i
-											class="fa  fa-instagram"></i></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="images/whatsapp2.png"></a></li>
+								&nbsp&nbsp
+								<li><a href="mailto:info@prowayst.com"><img src="images/mail.png"></i></a></li>
+								&nbsp&nbsp
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img
+											src="images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img
+											src="images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -131,118 +135,30 @@
 	<!-- gallery -->
 	<div class="gallery">
 		<div class="container">
-			<div class="gallery-grids">
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g1.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
+
+			<div class="col-md-4">
+				<div class="card">
+					<div class="image-container">
+						<a href="article/article01.html">
+							<img src="images/Article/article001.png" alt="Card image">
+							<div class="line"></div>
+					</div>
+					<div class="card-body">
+						<h5 class="card-title">⾔語治療是甚麼? 我的孩⼦需要嗎?</h5>
+						</a>
+						<p class="card-text">撰⽂：諾道團隊</p>
+						<div class="icon-row">
+							<i class="fa fa-clock-o left"> 7分鐘 </i>
+							<div class="right">
+								<i class="fa fa-eye"> 32 </i>
+								<i class="fa fa-heart-o"> 11 </i>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g2.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g3.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g4.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g4.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g5.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g5.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g6.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g6.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g2.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g4.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="col-md-4 gallery-grid">
-					<div class="grid">
-						<figure class="effect-apollo">
-							<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set"
-								data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ut sem ac lectus mattis sagittis. Donec pulvinar quam sit amet est vestibulum volutpat. Phasellus sed nibh odio. Phasellus posuere at purus sit amet porttitor. Cras euismod egestas enim eget molestie. Aenean ornare condimentum odio, in lacinia felis finibus non. Nam faucibus libero et lectus finibus, sed porttitor velit pellentesque.">
-								<img src="images/g1.jpg" alt="" />
-								<figcaption>
-								</figcaption>
-							</a>
-						</figure>
-					</div>
-				</div>
-				<div class="clearfix"> </div>
-				<script src="js/lightbox-plus-jquery.min.js"> </script>
 			</div>
+
+
 		</div>
 	</div>
 	<!-- //gallery -->
@@ -250,13 +166,24 @@
 	<div class="footer">
 		<div class="container">
 			<div class="agile-footer-grids">
-				<div class="col-md-12 agile-footer-grid">
-					<p>如有任何查詢或洽談合作，歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-						<span>Address: N3, 21/F, W LUXE, No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-					</p>
+				<div class="col-md-4 agile-footer-grid">
+					<h4>諾道言語治療</h4>
+					<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+					<span>電話：6532 8821</span><br>
+					<span>電郵：info@prowayst.com</span>
 				</div>
 
+				<div class="col-md-4 agile-footer-grid">
+					<span><b>星期二至日</b> 09:00 - 18:00</span>
+					<br><br>
+					<span><b>星期一</b> 休息</span>
+					<br><br>
+					<span><b>敬請預約</b></span>
+				</div>
+
+				<div class="videos col-md-2 agile-footer-grid">
+
+				</div>
 
 				<div class="clearfix"> </div>
 			</div>
