--- a/our-services/intervention.html
+++ b/our-services/intervention.html
@@ -97,20 +97,20 @@
 											</ul>
 										</li>
 										<li class=""><a href="#" class="dropdown-toggle hvr-bounce-to-bottom"
-												data-toggle="dropdown" role="button" aria-haspopup="true"
-												aria-expanded="false">諾道團隊<span class="caret"></span></a>
+											data-toggle="dropdown" role="button" aria-haspopup="true"
+											aria-expanded="false">諾道團隊<span class="caret"></span></a>
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#therapist">言語治療師</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">註冊社工</a>
+												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">社工</a>
-												</li>
 											</ul>
-										</li>
+									</li>
 										<li><a href="../share.html">諾道分享</a></li>
 										<li><a href="../good.html">諾道好評</a></li>
-										<li><a href="../contact.html">聯絡我們</a></li>
+										<li><a href="../contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -118,14 +118,12 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><i class="fa fa-whatsapp"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><i class="fa fa-envelope"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><i
-											class="fa fa-facebook"></i></a></li>&nbsp&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><i
-											class="fa  fa-instagram"></i></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="../images/whatsapp2.png"></a></li>
+								&nbsp&nbsp
+								<li><a href="mailto:info@prowayst.com"><img src="../images/mail.png"></i></a></li>
+								&nbsp&nbsp
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img src="../images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img src="../images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -157,9 +155,7 @@
 						<option value="#treatment">諾道皇牌課程</option>
 						<option value="#treatment1">個別⾔語治療</option>
 						<option value="#treatment2">綜合能力提升班</option>
-						<option value="#treatment3">講故事技巧躍升班</option>
-						<option value="#treatment4">諾道非凡個別訓練</option>
-						<option value="#treatment5">⼀對⼀兒童為本遊戲輔導</option>
+						<option value="#treatment3">諾道非凡個別訓練</option>
 					</select>
 				</div>
 			</div>
@@ -172,7 +168,7 @@
 					🔶 ⾔語治療師＋註冊社⼯策劃及帶領<br>
 					🔶 ⾼⼈⼿比例(1對2)，確保你的孩⼦每分每秒都有所得著<br>
 					🔶 每星期30分鐘1對1⾔語治療<br>
-					🔶 每星期30分鐘1對1遊戲輔導<br>
+					🔶 每星期30分鐘1對1特別遊戲時間<br>
 					🔶 每⽉家長觀課，與你⼀同⾒證孩⼦的進步<br>
 					🔶 每⽉詳細家長諮詢(可選⾯談/zoom)<br>
 					🔶 個別訓練由⼩組同⼀位⾔語治療師/註冊社⼯負責，確保質素及⼀致性<br>
@@ -181,7 +177,7 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/諾道皇牌課程"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
@@ -193,7 +189,7 @@
 					🔶 持3個⽉內⾔語治療評估報告可免評估<br>
 					🔶 每次治療後均會和家長傾談當節重點及跟進⽅向<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/個別⾔語治療"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
@@ -206,36 +202,11 @@
 					涵蓋範疇：語⾔＋認知＋社交＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/綜合能力提升班"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 				<hr>
-				<p><img src="../images/o3_1.png"> <b id="treatment3">講故事技巧躍升班</b><br><br>
-
-					🌟 ⾔語治療師規劃及教授🌟<br><br>
-
-					三⾄四歲的⼩朋友開始懂得運⽤連接詞及掌握較長較複雜的句⼦，對事情發⽣的先後次序有概念，亦有基本的邏輯性，這時正是教導⼩朋友講故事的絕好時機！<br><br>
-					諾道的「講故事技巧躍升班」由⾔語治療師規劃及教授， 從⾔語治療的⾓度切入，透過對語⾔發展的專業知識提升⼩朋友：<br>
-					✅ 圖⽚觀察能⼒<br>
-					✅ 詞彙運⽤的準確度及豐富性<br>
-					✅ 運⽤不同句式的能⼒<br>
-					✅ 邏輯思維能⼒<br>
-					✅ ⾓⾊代入能⼒<br>
-					✅ 加入對話的能⼒<br>
-					✅ 語⾔組織能⼒<br>
-					✅ 說話流暢度<br><br>
-					🔶 K1-K3的「講故事技巧躍升班」針對⼩⼀⾯試要求<br>
-					🔶 P1-P3的「講故事技巧躍升班」針對⼩學⼝語考試要求<br>
-					🔶 ⾼⼈⼿比例(1對3)，確保你的孩⼦每分每秒都有所得著<br>
-					🔶 每期均由同⼀位⾔語治療師負責，確保質素及⼀致性<br>
-					🔶 每次課後均會和家長傾談當節重點及跟進⽅向
-					<br>
-					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
-						6532 8821</a>，將有專人為你提供詳情。
-				</p>
-				<hr>
-				<p><img src="../images/o5.png"> <b id="treatment4">諾道非凡個別訓練</b><br><br>
+				<p><img src="../images/o5.png"> <b id="treatment3">諾道非凡個別訓練</b><br><br>
 
 					🚀 為你把個別訓練帶到另⼀個層次將⾔語治療及綜合能⼒訓練結合，每次課堂先由⾔語治療師提供30分鐘個別⾔語治療，
 					緊接由註冊社⼯透過45分鐘個別訓練將前者所學加以鞏固，同時提升其他發展範疇。<br><br>
@@ -246,27 +217,7 @@
 					涵蓋範疇：語⾔＋認知＋讀寫＋⼤⼩肌＋⾃理＋情緒
 					<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
-						6532 8821</a>，將有專人為你提供詳情。
-				</p>
-				<hr>
-				<p><img src="../images/o4.png"> <b id="treatment5">⼀對⼀兒童為本遊戲輔導</b><br><br>
-
-					你和我⼩時候都喜歡玩，長⼤後卻忘記了遊戲正正是兒童表達⾃⼰最⾃然的渠道；當感到被
-					明⽩和接納，兒童就能重新看⾒⾃⼰的能⼒。輔導以遊戲作媒介，讓你的孩⼦透過⾃⼰最熟
-					識的⽅法「玩出」⼼事，整理內在經驗，讓想法和感受在安全的環境下得以表達。<br><br>
-					🔶 適合遇到煩惱挫折，需要情緒出⼝，缺乏安全感/能⼒感，需要提昇⾃尊⾃信或有⾏為問
-					題之2-10歲兒童<br>
-					🔶 諾道為孩⼦打造的「特別遊戲室」內所預備的玩具都具有治療性，由諾道團隊精⼼挑
-					選，令進入房間的每⼀位孩⼦都在充滿信任的氛圍下獲得內⼼成長的養份<br>
-					🔶 每期均由同⼀位註冊社⼯負責，確保質素及⼀致性<br>
-					🔶 輔導過程需要家長⾼度參與，令遊戲輔導更能協助孩⼦⾯對⽇常挑戰和壓⼒<br>
-					🔶 ⽗⺟需於⼦女進⾏第⼀次遊戲輔導前，與註冊社⼯進⾏⼤約1⼩時詳細諮詢，以瞭解⼩朋
-					友情況(可選⾯談/zoom)<br>
-					🔶 每完成⼀期均會和家長進⾏詳細諮詢，傾談重點及跟進⽅向(可選⾯談/zoom)
-					<br>
-					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/諾道非凡個別訓練"><img src="../images/whatsapp.png">
 						6532 8821</a>，將有專人為你提供詳情。
 				</p>
 			</div>
@@ -289,23 +240,34 @@
 	</div>
 	</div>
 	<!-- //single -->
-	<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="agile-footer-grids">
-				<div class="col-md-12 agile-footer-grid">
-					<p>如有任何查詢或洽談合作，歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-						<span>Address: N3, 21/F, W LUXE, No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-					</p>
-				</div>
-
-
-				<div class="clearfix"> </div>
+<!-- footer -->
+<div class="footer">
+	<div class="container">
+		<div class="agile-footer-grids">
+			<div class="col-md-4 agile-footer-grid">
+				<h4>諾道言語治療</h4>
+				<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+				<span>電話：6532 8821</span><br>
+				<span>電郵：info@prowayst.com</span>
 			</div>
+
+			<div class="col-md-4 agile-footer-grid">
+				<span><b>星期二至日</b> 09:00 - 18:00</span>
+				<br><br>
+				<span><b>星期一</b> 休息</span>
+				<br><br>
+				<span><b>敬請預約</b></span>
+			</div>
+
+			<div class="videos col-md-2 agile-footer-grid">
+
+			</div>
+
+			<div class="clearfix"> </div>
 		</div>
 	</div>
-	<!-- //footer -->
+</div>
+<!-- //footer -->
 	<!-- copyright -->
 	<div class="agileits-w3layouts-copyright">
 		<div class="container">
