--- a/our-services/prevention.html
+++ b/our-services/prevention.html
@@ -91,14 +91,15 @@
 											<ul class="dropdown-menu">
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#therapist">言語治療師</a></li>
+												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">註冊社工</a>
+												</li>
 												<li><a class="hvr-bounce-to-bottom"
 														href="../about.html#psychologist">教育心理學家</a></li>
-												<li><a class="hvr-bounce-to-bottom" href="../about.html#worker">社工</a></li>
 											</ul>
 										</li>
 										<li><a href="../share.html">諾道分享</a></li>
 										<li><a href="../good.html">諾道好評</a></li>
-										<li><a href="../contact.html">聯絡我們</a></li>
+										<li><a href="../contact.html">聯絡諾道</a></li>
 									</ul>
 									<div class="clearfix"> </div>
 								</div>
@@ -106,14 +107,12 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><i class="fa fa-whatsapp"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><i class="fa fa-envelope"></i></a></li>
-								&nbsp&nbsp&nbsp
-								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><i
-											class="fa fa-facebook"></i></a></li>&nbsp&nbsp&nbsp
-								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><i
-											class="fa  fa-instagram"></i></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="../images/whatsapp2.png"></a></li>
+								&nbsp&nbsp
+								<li><a href="mailto:info@prowayst.com"><img src="../images/mail.png"></i></a></li>
+								&nbsp&nbsp
+								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img src="../images/facebook.png"></a></li>&nbsp&nbsp
+								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img src="../images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
@@ -134,14 +133,14 @@
 				<h4>諾道團隊為你提供由預防、治療以至提升三大層面的服務。</h4>
 				<img src="../images/p3.jpg" alt="" />
 			</div>
-		
+
 			<br>
 			<div class="ourservices-container">
 				<img src="../images/s1_1.png">
-				<h3 id="prevention">預防</h3>				
-			  </div>
+				<h3 id="prevention">預防</h3>
+			</div>
 
-			  <div>
+			<div>
 				<h4>講座/培訓工作坊</h4>
 				<p>諾道定期舉辦不同主題的講座，亦與學校及不同機構合作，提供培訓工作坊。對象包括家長、老師及從事其他專業的同工。</p>
 				<br>
@@ -150,46 +149,60 @@
 					🔥教你提升子女的語言能力<br>
 					🔥辨識子女的發音問題<br>
 					<br>
-					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png"> 6532 8821</a>，將有專人為你提供詳情。
-					
-					</p>
-			  </div>
+					想了解更多？致電或 <a href="https://wa.me/85265328821?text=我想查詢講座/培訓工作坊"><img src="../images/whatsapp.png">
+						6532 8821</a>，將有專人為你提供詳情。
 
-			  <hr>
-			  <div class="ourservices-container">
+				</p>
+			</div>
+
+			<hr>
+			<div class="ourservices-container">
 				<a href="intervention.html"><img src="../images/s2_1.png">
-				<h3 id="intervention">治療</h3></a>
-			  </div>
+					<h3 id="intervention">治療</h3>
+				</a>
+			</div>
 
-			  <hr>
-			  <div class="ourservices-container">
+			<hr>
+			<div class="ourservices-container">
 				<a href="enhancement.html"><img src="../images/s3_1.png">
-				<h3 id="enhancement">提升</h3></a>
-			  </div>
+					<h3 id="enhancement">提升</h3>
+				</a>
+			</div>
 
-			 
 
-	</div>
+
+		</div>
 	</div>
 	</div>
 	<!-- //single -->
-	<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<div class="agile-footer-grids">
-				<div class="col-md-12 agile-footer-grid">
-					<p>如有任何查詢或洽談合作，歡迎致電 / whatsapp 6532 8821 或電郵至info@prowayst.com跟我們聯絡。
-						<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span>
-						<span>Address: N3, 21/F, W LUXE, No.5 On Yiu Street, Shek Mun, Sha Tin</span>
-					</p>
-				</div>
-
-
-				<div class="clearfix"> </div>
+<!-- footer -->
+<div class="footer">
+	<div class="container">
+		<div class="agile-footer-grids">
+			<div class="col-md-4 agile-footer-grid">
+				<h4>諾道言語治療</h4>
+				<span>地址：沙田石門安耀街5號W LUXE 21樓N3室</span><br>
+				<span>電話：6532 8821</span><br>
+				<span>電郵：info@prowayst.com</span>
 			</div>
+
+			<div class="col-md-4 agile-footer-grid">
+				<span><b>星期二至日</b> 09:00 - 18:00</span>
+				<br><br>
+				<span><b>星期一</b> 休息</span>
+				<br><br>
+				<span><b>敬請預約</b></span>
+			</div>
+
+			<div class="videos col-md-2 agile-footer-grid">
+
+			</div>
+
+			<div class="clearfix"> </div>
 		</div>
 	</div>
-	<!-- //footer -->
+</div>
+<!-- //footer -->
 	<!-- copyright -->
 	<div class="agileits-w3layouts-copyright">
 		<div class="container">
