--- a/article/article01.html
+++ b/article/article01.html
@@ -107,14 +107,14 @@
 						</div>
 						<div class="agileinfo-social-grids">
 							<ul>
-								<li><a href="https://wa.me/85265328821"><img src="images/whatsapp2.png"></a></li>
+								<li><a href="https://wa.me/85265328821"><img src="../images/whatsapp2.png"></a></li>
 								&nbsp&nbsp
-								<li><a href="mailto:info@prowayst.com"><img src="images/mail.png"></i></a></li>
+								<li><a href="mailto:info@prowayst.com"><img src="../images/mail.png"></i></a></li>
 								&nbsp&nbsp
 								<li><a href="https://www.facebook.com/prowayspeechtherapy/"><img
-											src="images/facebook.png"></a></li>&nbsp&nbsp
+											src="../images/facebook.png"></a></li>&nbsp&nbsp
 								<li><a href="https://www.instagram.com/prowayspeechtherapy/"><img
-											src="images/instagram.png"></a></li>
+											src="../images/instagram.png"></a></li>
 							</ul>
 						</div>
 						<div class="clearfix"> </div>
